[package]
name = "physical_constants"
version = "0.4.1"
description = "CODATA recommended values of physical constants"
documentation = "https://docs.rs/physical_constants/"
repository = "https://github.com/JonasOlson/rust-physical_constants"
keywords = ["physics", "constants", "CODATA"]
categories = ["science"]
license = "GPL-3.0"
authors = ["Jonas Olson <jolson@kth.se>"]
build = "build.rs"
edition = '2021'

[dependencies]
unitage = { version = "0.0", optional = true }

[build-dependencies]
regex = "1.0.0"

[dev-dependencies]
unitage = "0.0"